--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+				<meta charset="UTF-8">
+				<title>Заголовок страницы</title>
+</head>
+<body>
+				<h1>VLDPRODпр</h1>
+		<script type="text/javascript">
+var tntds = {"p":"324021", "b":{"920917": "16"}}
+teasernet_use_main_domain = true;
+</script>
+<script type="text/javascript" src="//rkkvq.com/0b75/0/0/2/511a03293f.js"></script>
+</body>
+</html>
