--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
 
+<! DOCTYPE html>
+
+<html lang = "ru">
+
+<head>
+
+				<meta charset = "UTF-8">				<title>Заголовок страницы</title>
+
+</head>
+
+<body>
+
+				<h1> VLDPROD </h1>
+
+<! - www.people-group.net ->
+
+<script type = "text / javascript"> (function () {var pgs = document.createElement ('script'); pgs.type = 'text / javascript'; pgs.async = true; pgs.src = ("https : "== document.location.protocol?" https ":" http ") + ': //ads.people-group.net/337781/3/1/'; var s = document.getElementsByTagName ('script') [0]; s.parentNode.insertBefore (pgs, s);}) (); </script>
+
+<a href="https://www.people-group.su/?r=337781" rel="nofollow"> партнерская программа для вебмастеров </a>
+
+<! - www.people-group.net ->
+
+</body>
+
+</html>
