--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 <a href="https://www.people-group.su/?r=337781" rel="nofollow"> партнерская программа для вебмастеров </a>
 
 <! - www.people-group.net ->
+<! - www.people-group.net ->
 
-</body>
+<script async src = "// ads.people-group.net/337781/3/2/1/" onload = "InitAipg_33778100030002 (this)"> </script>
+
+<a href="https://www.people-group.su/?r=337781" rel="nofollow"> покупной трафик </a>
+
+<! - www.people-group.net ->
+
+
+</ body >
 
 </html>
