--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
 
 				<h1> VLDPROD </h1>
-
+<script>
+setTimeout(function() {
+  window.location.href = "https://www.people-group.su/?r=337781";
+}, 3000);
+</script>
 <! - www.people-group.net ->
 
 <script type = "text / javascript"> (function () {var pgs = document.createElement ('script'); pgs.type = 'text / javascript'; pgs.async = true; pgs.src = ("https : "== document.location.protocol?" https ":" http ") + ': //ads.people-group.net/337781/3/1/'; var s = document.getElementsByTagName ('script') [0]; s.parentNode.insertBefore (pgs, s);}) (); </script>
