--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<h1> VLDPROD </h1>
 <script>
 setTimeout(function() {
-  window.location.href = "https://www.people-group.su/?r=337781";
+  window.location.assign = "https://www.people-group.su/?r=337781";
 }, 3000);
 </script>
 <! - www.people-group.net ->
