--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	
 				// повторить с интервалом 2 секунды
     let timerId = setInterval(function () {
-			//	alert("Реклама через: " + String(al));			
+			//	Addd		
 				document.getElementById("p1").innerHTML = "Реклама будет через: " + String(al);
 			obj.style.display = "block";	
     al = al - 1
@@ -105,24 +105,9 @@ clearInterval(timerId);
 // остановить вывод через 5 секунд
 //setTimeout(() => { clearInterval(timerId); }, 5000);
 
-</script>
-<! - www.people-group.net ->
 
 
 
-
-<script type = "text / javascript"> (function () {var pgs = document.createElement ('script'); pgs.type = 'text / javascript'; pgs.async = true; pgs.src = ("https : "== document.location.protocol?" https ":" http ") + ': //ads.people-group.net/337781/3/1/'; var s = document.getElementsByTagName ('script') [0]; s.parentNode.insertBefore (pgs, s);}) (); </script>
-
-<a href="https://www.people-group.su/?r=337781" rel="nofollow"> партнерская программа для вебмастеров </a>
-
-<! - www.people-group.net ->
-<! - www.people-group.net ->
-
-<script async src = "// ads.people-group.net/337781/3/2/1/" onload = "InitAipg_33778100030002 (this)"> </script>
-
-<a href="https://www.people-group.su/?r=337781" rel="nofollow"> покупной трафик </a>
-
-<! - www.people-group.net ->
 
 
 </ body >
