--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         border-radius: 10px;
         color: #47ff40;
 						  }
+						p {font-size: 100%;}
 						#cFakt {
 										width: 90%;
 										padding: 15px;
@@ -88,7 +89,7 @@
 	
 				// повторить с интервалом 2 секунды
     let timerId = setInterval(function () {
-			//	Addd		
+			//	ads
 				document.getElementById("p1").innerHTML = "Реклама будет через: " + String(al);
 			obj.style.display = "block";	
     al = al - 1
@@ -105,11 +106,8 @@ clearInterval(timerId);
 // остановить вывод через 5 секунд
 //setTimeout(() => { clearInterval(timerId); }, 5000);
 
+</script>
 
-
-
-
-
-</ body >
+</body >
 
 </html>
