--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         border-radius: 10px;
         color: #47ff40;
 						  }
-						p {font-size: 100%;}
+						p {font-size: 20pt%;}
 						#cFakt {
 										width: 90%;
 										padding: 15px;
