--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					  	width: 90%;
         height: 50px;
         text-align: center;
-        padding: 15px;
+       // padding: 15px;
         border: 3px solid #ff152a;
         border-radius: 10px;
         color: #47ff40;
