--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 								
 						#myShowBlock {
 					  	width: 90%;
-        height: 50px;
+        height: 80px;
         text-align: center;
        // padding: 15px;
         border: 3px solid #ff152a;
         border-radius: 10px;
         color: #47ff40;
-        vertical-align: text-top;
+       // vertical-align: text-top;
 						  }
 						#p1 {font-size: 30pt;}
 						#cFakt {
