--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         border: 3px solid #ff152a;
         border-radius: 10px;
         color: #47ff40;
-       // vertical-align: text-top;
+        vertical-align: text-top;
 						  }
 						#p1 {font-size: 30pt;}
 						#cFakt {
