--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
        // padding: 15px;
         border: 3px solid #ff152a;
         border-radius: 10px;
-        color: #47ff40;
-        vertical-align: text-top;
-						  }
-						#p1 {font-size: 30pt;}
+        color: #47ff40;}
+     
+						  
+						#p1 {font-size: 30pt; vertical-align: top;}
 						#cFakt {
 										width: 90%;
 										padding: 15px;
