--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 						#cFakt {
 										width: 100%;
 										padding: 15px;
+										padding-right: 2;
 										border: 3px solid #0000cc;
 										border-radius: 10px;
 										
