--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							//	padding-left: 20px;
 				}
 				#top-20 {
-							padding-left: 3px;	
+							padding-left: 5px;	
 				}
 				#g_i_t {
 								background-color: #ffffff;
@@ -97,7 +97,7 @@
     			<div><p>Давайте розглянемо, які напрямки і навички будуть актуальні в найближчому майбутньому.<br></br></p></div>
     			</div>
     			<div>
-    			<h2>Топ-20 перспективних професій найближчого майбутнього <br> </br></h2><p id="top-20"> 
+    			<center><h2>Топ-20 перспективних професій найближчого майбутнього <br> </br></h2></center><p id="top-20"> 
     			
 1. <mark> Менеджер з розвитку бізнесу в області штучного інтелекту </mark> (ШІ). Хоча штучний інтелект може робити багато речей, є те, чого він робити не зможе. Продавати себе. Цим і буде займатися менеджер з розвитку ШІ. <br> </br> 
 
@@ -152,9 +152,9 @@
 20.<mark>Адвокат віртуального образу</mark> потрібен навіть сьогодні. Сучасні технології вже сьогодні дозволяють створювати фейковий відео з максимально реалістично виглядають знаменитостями. Так що в самому найближчому майбутньому будуть потрібні фахівці, які зможуть відстежувати і відрізняти справжні зображення і відео людей від підроблених.</p>
         </div><hr>
         <div>
-       <h2> 				
+       <center><h2> 				
        Де вивчати професії майбутнього?
-       </h2>
+       </h2></center>
         <p>							
 Як видно з рейтингів, найбільш затребуваними стануть спеціальності на стику дисциплін. Зарубіжні вузи, тісно пов'язані з індустрією, швидко реагують на потреби ринку праці і самі задають тренди. Розглянемо тенденції в різних професійних сферах і затребувані в перспективі спеціальності. Ось де ми рекомендуємо отримати освіту, щоб нові тенденції на ринку праці не застали вас зненацька.
             </p>
