--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							//	padding-left: 20px;
 				}
 				#top-20 {
-							padding-left: 5px;	
+							padding-left: 0.5em;	
 				}
 				#g_i_t {
 								background-color: #ffffff;
