--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 				<style>		  
-						#p1 {font-size: 20pt; //vertical-align: top;
+						p {font-size: 20pt; //vertical-align: top;
 						}
 						#cFakt {
 										width: 100%;
