--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 								font-size: 1.1em;
 				}
 				#img1 {
-								width: 100%
+								width: 85%;
+								height: 30%;
 				}
 				#vr_class {
 				 width: 50%;
