--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 								font-size: 1.1em;
 				}
 				#img1 {
-								width: 300pt;
-								height: 200pt;
+								width: 300px;
+								height: 200px;
 				}
 				#vr_class {
 				 width: 50%;
