--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 				<style>		  
 						p {font-size: 20pt; //vertical-align: top;
 						}
+						h2 {font-size: 27pt;}
+						h1 {font-size: 28pt;}
 						#cFakt {
 										width: 100%;
 										padding: 15px;
@@ -83,8 +85,8 @@
 								font-size: 1.1em;
 				}
 				#img1 {
-								width: 600pt;
-								height: 400pt;
+								width: 300pt;
+								height: 200pt;
 				}
 				#vr_class {
 				 width: 50%;
