--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<style>		  
 						p {font-size: 20pt; //vertical-align: top;
 						}
+						li {font-size: 20pt}
 						h2 {font-size: 27pt;}
 						h1 {font-size: 28pt;}
 						#cFakt {
@@ -190,6 +191,18 @@
 
 <span id="g_i_t"> — </span>Дипломні програми за кордоном</span>
         				</p><hr>
+        </div>
+        <div>
+        				<h2>Які навички будуть в тренді:</h2>
+        				<ul> 
+        								<li>Системний образ мислення;</li>                       															<li>Екологічна спрямованість в розумінні навколишнього світу;</li>
+        								 <li>Програмування + вміння роботи з штучним інтелектом на різних його рівнях;</li>
+        								  <li>Трудовий процес в умовах невизначеності;</li> 
+        								  <li>Комунікація між суміжними галузями;</li> 
+        								  <li>Орієнтованість на спілкування з клієнтами;</li>
+        								   <li>Керівництво проектною діяльністю;</li>
+        								    <li>Мультикультурність.</li>
+        				</ul>
         </div>
         <div id="download">
         			<h2>Скачати цю статтю можна у декільках форматах:	 </h2>
