--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<style>		  
 						p {font-size: 20pt; //vertical-align: top;
 						}
-						li {font-size: 20pt}
+						li {font-size: 20pt; text-align: left;}
 						h2 {font-size: 27pt;}
 						h1 {font-size: 28pt;}
 						#cFakt {
