--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 				<style>		  
-						p {font-size: 20pt; //vertical-align: top;
+						p {font-size: 20pt; text-align: left; //vertical-align: top;
 						}
 						li {font-size: 20pt; text-align: left;}
 						h2 {font-size: 27pt;}
@@ -203,6 +203,13 @@
         								   <li>Керівництво проектною діяльністю;</li>
         								    <li>Мультикультурність.</li>
         				</ul>
+        </div><hr>
+        <div>
+        				<p style="white-space: pre-wrap;">Вибір професії – штука складна. Але не варто забувати, що в умовах швидких змін так само легко змінити і спеціальність, головне розвивати "скіли", які максимально прокачують мозок та роблять його дуже гнучким.
+
+Своїм клієнтам, яким важко визначитися із майбутнім дитини, або які готуються з чогось починати, ми радимо вивчати іноземні мови та сфокусуватися на підборі декількох професій, які найбільше відповідають талантам та здібностям дитини.
+
+Головне не форсувати події та дати спокійно подумати і прийняти правильне рішення, від якого залежатиме все подальше життя.</p>
         </div>
         <div id="download">
         			<h2>Скачати цю статтю можна у декільках форматах:	 </h2>
