--- a/index.html
+++ b/index.html
@@ -214,8 +214,13 @@
         <div id="download">
         			<h2>Скачати цю статтю можна у декільках форматах:	 </h2>
         			<dl id="dl_download" style="text-align: left;">
-        							<li><a href="">Професії-майбутнього.pdf</a></li> 
-        							<li>ppx</li>       							
+        							<li><a href="Професії-майбутнього.pdf">Професії-майбутнього.pdf</a></li> 
+        							<li><a href="Професії-майбутнього.pptx">Професії-майбутнього.pptx</a></li>       							
+        			</dl>
+        			<p>Для вчителя</p>
+        			<dl id="dl_download">
+        							<li><a href="ПРЕЗЕНТАЦІЯ--ЗАЛІПСЬКИЙ.pdf">ПРЕЗЕНТАЦІЯ--ЗАЛІПСЬКИЙ.pdf</a></li>
+        							<li><a href="ПРЕЗЕНТАЦІЯ--ЗАЛІПСЬКИЙ.pptx">ПРЕЗЕНТАЦІЯ--ЗАЛІПСЬКИЙ.pptx</a></li>
         			</dl>
         </div>
     </div>
