--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
 
-				<meta charset = "UTF-8">				<title>Заголовок страницы и не только</title>
+				<meta charset = "UTF-8">				<title>Професії Майбутнього</title>
 				<script data-ad-client="ca-pub-3821394870164133" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </head>
