--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				
 				<div id="reclama">
 								<div><img onclick="rec.style.display = 'none';" id="but_cl" src="krest.png" alt="X" width="9%" height="15%"></div>
-								jwkamamsmdmd
+								Тут должна быть реклама но её нету))))))
 				</div>
 			<img id="img1" src="img1.png" alt="no image">	
 				
