--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 								font-size: 1.1em;
 				}
 				#img1 {
-								width: 300pt;
-								height: 200pt;
+								width: auto;
+								height: auto;
 				}
 				#vr_class {
 				 width: 50%;
