--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				}
 				#img1 {
 								width: 300pt;
-								height: 200pt;
+								height: auto;
 				}
 				#vr_class {
 				 width: 50%;
