--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								font-size: 1.1em;
 				}
 				#img1 {
-								width: 300pt;
+								max-width: 300pt;
 								height: auto;
 				}
 				#vr_class {
