--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 								font-size: 1.1em;
 				}
 				#img1 {
-								max-width: 300pt;
-								height: auto;
+								max-width: 100%;
+								//height: 200pt;
 				}
 				#vr_class {
 				 width: 50%;
