--- a/jobs/excel/index.html
+++ b/jobs/excel/index.html
@@ -1,1 +1,60 @@
 
+<! DOCTYPE html>
+
+<html lang = "ru">
+
+<head>
+
+				<meta charset = "UTF-8">				<title>Профессии будущего</title>
+				<script data-ad-client="ca-pub-3821394870164133" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<style type="text/css">
+#ul_nav {
+				width: 100%;
+				padding-left: 0;
+				margin-left: 0;
+    list-style: none; /*убираем маркеры списка*/
+}
+				body nav ul a {
+				text-decoration: none;
+    font-family: sans-serif;
+    color: #5757a0;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: lavender;
+    border-bottom: 5px solid #5757a0;
+				}
+				nav li {
+					display: inline;			
+				}
+				</style>
+
+<body>
+				<nav>
+								<ul id="ul_nav">
+												<li><a href="https://vldprod.ml/home/index.html">Главная</a></li>
+												<li><a href="https://vldprod.ml/me/index.html">О нас</a></li>
+												<li><a href="https://vldprod.ml/jobs/index.html">Работы</a></li>
+								</ul>
+				</nav>
+
+
+				<center><h1>Практические работы по MS Excel</h1><center>
+				<img src="Заліпський–п.р.1-2.pdf">
+				<img src="Заліпський-п.р.3-4.pdf">
+				
+
+				<div id="download">
+        			<h2>Скачати цю статтю можна у декільках форматах:	 </h2>
+        			<dl id="dl_download" style="text-align: left;">
+        							<li><a href="Заліпський–п.р.1-2.pdf">Заліпський–п.р.1-2.pdf</a></li> 
+        							<li><a href="Заліпський–п.р.1-2.xlsx">Заліпський–п.р.1-2.xlsx</a></li>       							
+        			
+        							<li><a href="Заліпський-п.р.3-4.pdf">Заліпський-п.р.3-4.pdf</a></li>
+        							<li><a href="Заліпський-п.р.3-4.xlsx">Заліпський-п.р.3-4.xlsx</a></li>
+        			</dl>
+
+        </div>
+
+			</body>
