--- a/jobs/index.html
+++ b/jobs/index.html
@@ -111,6 +111,7 @@
 				nav li {
 					display: inline;			
 				}
+				a {}
 
 
 				</style>
@@ -119,8 +120,10 @@
 												<li><a href="https://vldprod.ml/home/index.html">Главная</a></li>
 												<li><a href="https://vldprod.ml/me/index.html">О нас</a></li>
 												<li><a href="https://vldprod.ml/jobs/index.html">Работы</a></li>
+												<li><a href="excel/index.html"><b>Практические работы по MS Excel</b></a></li>
 								</ul>
 				</nav>
+				
 
 				<center><h1>Які професії з'являться у майбутньому? На кого вчитися щоб отримувати велику зарплатню? — Всі відповіді дивись тут!</h1><center>
 				
