--- a/jobs/excel/index.html
+++ b/jobs/excel/index.html
@@ -41,15 +41,13 @@
 
 
 				<center><h1>Практические работы по MS Excel</h1><center>
-				<img src="Заліпський–п.р.1-2.pdf">
-				<img src="Заліпський-п.р.3-4.pdf">
 				
 
 				<div id="download">
         			<h2>Скачати цю статтю можна у декільках форматах:	 </h2>
         			<dl id="dl_download" style="text-align: left;">
         							<li><a href="Заліпський–п.р.1-2.pdf">Заліпський–п.р.1-2.pdf</a></li> 
-        							<li><a href="Заліпський–п.р.1-2.xlsx">Заліпський–п.р.1-2.xlsx</a></li>       							
+        							<li><a href="Заліпський–п.р.1-2..xlsx">Заліпський–п.р.1-2.xlsx</a></li>       							
         			
         							<li><a href="Заліпський-п.р.3-4.pdf">Заліпський-п.р.3-4.pdf</a></li>
         							<li><a href="Заліпський-п.р.3-4.xlsx">Заліпський-п.р.3-4.xlsx</a></li>
