--- a/jobs/excel/index.html
+++ b/jobs/excel/index.html
@@ -5,7 +5,7 @@
 
 <head>
 
-				<meta charset = "UTF-8">				<title>Профессии будущего</title>
+				<meta charset = "UTF-8">				<title>Практические работы по MS Excel</title>
 				<script data-ad-client="ca-pub-3821394870164133" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
