--- a/jobs/excel/index.html
+++ b/jobs/excel/index.html
@@ -15,7 +15,7 @@ body 	{
 								width: 100%;
 								height: 100%;
 #ul_nav {
-				max-width: 100%;
+				width: 100%;
 				padding-left: 0;
 				margin-left: 0;
     list-style: none; /*убираем маркеры списка*/
