--- a/secjobs/index.html
+++ b/secjobs/index.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 				<style>
-						
+					body {
+width:100%;
+height:100%;
+}
+	#comments {
+max-width: 100%;
+
+}
 				</style>
 				
 				<div id="main">
