--- a/jobs/excel/index.html
+++ b/jobs/excel/index.html
@@ -45,15 +45,23 @@
 				
 
 				<div id="download">
-        			
+        			<h2><b>Практичні роботи 1-2, 1-3</b></h2>
         			<dl id="dl_download" style="text-align: left;">
-        							<li><a href="Заліпський–п.р.1-2.pdf">Заліпський–п.р.1-2.pdf</a></li> 
-        							<li><a href="Заліпський–п.р.1-2.xlsx">Заліпський–п.р.1-2.xlsx</a></li>       							
+        							<li><a href="Заліпський–п.р.1-2.pdf"><b>Заліпський–п.р.1-2.pdf</b></a></li> 
+        							<li><a href="Заліпський–п.р.1-2.xlsx"><b>Заліпський–п.р.1-2.xlsx</b></a></li>       							
 					                        <li></li>
-        							<li><a href="Заліпський-п.р.3-4.pdf">Заліпський-п.р.3-4.pdf</a></li>
-        							<li><a href="Заліпський-п.р.3-4.xlsx">Заліпський-п.р.3-4.xlsx</a></li>
+        							<li><a href="Заліпський-п.р.3-4.pdf"><b>Заліпський-п.р.3-4.pdf</b></a></li>
+        							<li><a href="Заліпський-п.р.3-4.xlsx"><b>Заліпський-п.р.3-4.xlsx</b></a></li>		
+        			</dl>
+        			<br>
+        			<h2>Контрольна робота №2</h2>
+        			<dl id="dl_download" style="text-align: left;">
+        							<li><a href="Заліпський–КР2.pdf"><b>Заліпський–КР2.pdf</b></a></li>
+        							<li><a href="Заліпський–КР2.xlsx"><b>Заліпський–КР2.xlsx</b></a></li>		
         			</dl>
 
         </div>
 
 			</body>
+	
+		</html>
