--- a/jobs/excel/index.html
+++ b/jobs/excel/index.html
@@ -10,6 +10,14 @@
 </head>
 <style type="text/css">
 
+h2 {
+	font-size: 20pt;
+}
+
+a {
+	font-size: 15pt;
+}
+
 #ul_nav {
 				width: 100%;
 				padding-left: 0;
